[project]
name = "pytest-sphinx"
version = "0.6.1"
description = "Doctest plugin for pytest with support for Sphinx-specific doctest-directives"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["sphinx", "pytest", "rst"]
authors = [
    { name="Thomas Hisch", email="t.hisch@gmail.com" }
]
maintainers = [
    { name="Thomas Hisch", email="t.hisch@gmail.com" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

# Requirements
dependencies = [
    "pytest >=8.0.0",
]

[project.optional-dependencies]
lint = [
    "isort >= 5",
    "flake8",
    "black",
    "mypy"
]

[project.urls]
homepage = "https://github.com/thisch/pytest-sphinx"

[project.entry-points."pytest11"]
"sphinx" = "pytest_sphinx"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
warn_unused_ignores = false  # mypy#8823

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
